Fixed css bug of filmstrip not aligning properly

--- a/src/static/styles/events.css
+++ b/src/static/styles/events.css
@@ -78,6 +78,7 @@ body {
 .panels {
     width: 65%;
     display: inline-block;
+    vertical-align: top;   
 }
 
 .boxes {
